@@ -1,0 +1,16 @@
+exports.context = { 
+    name: "John Dow",
+    toUpperCase: function() {
+        return function(context, callback) {
+            callback(undefined, function(data, context, callback) {
+                setTimeout(function(){
+                    callback(data.toUpperCase());
+                }, 300);
+            });
+        };
+    }
+};
+
+exports.options = {
+        
+};
