@@ -1,5 +1,7 @@
 In work, Version 0.2
 
+* Move tests to node-async-testing (in work)
+
 * Syntax checking (in work)
 
 2010.06.21, Version 0.1.11
